Bug 447032 - Clipboard plasmoid "Invoke Actions" look very ugly
Summary: Clipboard plasmoid "Invoke Actions" look very ugly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 5.23.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-15 16:30 UTC by Phos
Modified: 2021-12-15 17:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Clipboard invoking actions on long text (381.10 KB, image/png)
2021-12-15 16:37 UTC, Phos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Phos 2021-12-15 16:30:35 UTC
SUMMARY
The clipboard plasmoid presents an ugly menu when invoking actions on very long text

STEPS TO REPRODUCE
1. Copy long text
2. Setup an action
3. Press invoke actions, notice how ugly it looks with text overflowing

OBSERVED RESULT
Ugly text overflow

EXPECTED RESULT
Non ugly text overflow

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.15.7-zen1-1-zen (64-bit)
Graphics Platform: Wayland

SOLUTION
Remove the "Actions For: (copied text)
I consider that part unnecessary since it is quite clear what the user is invoking the action on
Comment 1 Phos 2021-12-15 16:37:09 UTC
Created attachment 144577 [details]
Clipboard invoking actions on long text
Comment 2 Nate Graham 2021-12-15 17:13:06 UTC
Git commit 802cc0a263371e583f9d679ae337cd006272f2ce by Nate Graham.
Committed on 15/12/2021 at 17:12.
Pushed by ngraham into branch 'master'.

klipper: Shorten unnecessarily long action menu title
FIXED-IN: 5.24

M  +1    -2    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/802cc0a263371e583f9d679ae337cd006272f2ce