klipper: Shorten unnecessarily long action menu title

BUG: 447032
FIXED-IN: 5.24